--- a/package.json
+++ b/package.json
@@ -13,10 +13,22 @@
     "cjsx-loader": "^3.0.0",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.11.1",
+    "css-loader": "^0.26.0",
     "dotenv": "^2.0.0",
+    "mobx": "^2.6.3",
+    "mobx-react": "^4.0.3",
+    "mobx-react-devtools": "^4.2.10",
+    "mobx-utils": "^1.1.2",
+    "node-sass": "^3.13.0",
+    "postcss-extend": "^1.0.5",
+    "postcss-focus": "^1.0.0",
+    "precss": "^1.4.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-hot-loader": "^3.0.0-beta.6"
+    "react-hot-loader": "^3.0.0-beta.6",
+    "react-router": "^3.0.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.20",
