--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mobx": "^2.6.3",
     "mobx-react": "^4.0.3",
     "mobx-react-devtools": "^4.2.10",
+    "mobx-react-router": "^3.0.0",
     "mobx-utils": "^1.1.2",
     "node-sass": "^3.13.0",
     "postcss-extend": "^1.0.5",
@@ -25,6 +26,7 @@
     "precss": "^1.4.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-fittext": "^0.0.7",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-router": "^3.0.0",
     "sass-loader": "^4.0.2",
