--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-preset-latest": "^6.16.0",
+    "bluebird": "^3.4.6",
     "browser-sync": "^2.18.2",
     "browser-sync-webpack-plugin": "^1.1.3",
     "cjsx-loader": "^3.0.0",
@@ -18,17 +19,19 @@
     "mobx": "^2.6.3",
     "mobx-react": "^4.0.3",
     "mobx-react-devtools": "^4.2.10",
-    "mobx-react-router": "^3.0.0",
     "mobx-utils": "^1.1.2",
     "node-sass": "^3.13.0",
     "postcss-extend": "^1.0.5",
     "postcss-focus": "^1.0.0",
     "precss": "^1.4.0",
     "react": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-dynamic-modal": "^1.1.1",
     "react-fittext": "^0.0.7",
     "react-hot-loader": "^3.0.0-beta.6",
-    "react-router": "^3.0.0",
+    "react-router": "next",
+    "react-spinkit": "^1.1.11",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1"
   },
